<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
        <item
        android:id="@+id/scan_localmusic"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/scan_localmusic"
        android:icon="@drawable/scan_music"
        />
        <item
        android:id="@+id/down_localmusicwords"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/down_localmusicwords"
        android:icon="@drawable/down_musicwords"
        />
        <item
        android:id="@+id/improve_musicquatity"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/improve_musicquatity"
        android:icon="@drawable/improve_music"
        />

</menu>
