<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.h2603953.littleyun"
    android:id="@+id/user_img_bg"        
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    >
    <com.h2603953.littleyun.widget.CircleImageView 
	       android:id="@+id/user_img"
	       android:layout_marginTop="30dp"
	       android:layout_width="120dp"
	       android:layout_height="160dp"
	       android:layout_alignParentTop="true"
	       android:layout_centerHorizontal="true"
	       app:stroke_width="2dp" 
	       app:padding="@dimen/tab_bottom"
	       app:text="@string/unlogin" 
	       app:text_size="18dp"
	       app:stroke_color="@color/toolbarTextColor"        
        />
     <LinearLayout 
     	    android:id="@+id/btns"
     	   	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/user_img"
    		android:layout_marginTop="24dp"
    		android:layout_marginLeft="16dp"
    		android:layout_marginRight="16dp"
    		android:layout_marginBottom="16dp"
    		android:layout_centerHorizontal="true"
    		android:orientation="horizontal"
    		android:layout_gravity="center"
     	    >
     	<com.h2603953.littleyun.widget.CircleImageView 
	       android:id="@+id/local_btn"
	       style="@style/mymusic_model_btn"	     
	       app:content_imageview="@drawable/local_music"
	       app:text="@string/local"
        />
     	<com.h2603953.littleyun.widget.CircleImageView 
	       android:id="@+id/favourite"
	       style="@style/mymusic_model_btn"
	       app:content_imageview="@drawable/favourite"
	       app:text="@string/favorite"
        /> 
        <com.h2603953.littleyun.widget.CircleImageView 
	       android:id="@+id/down_music"
	       style="@style/mymusic_model_btn"
	       app:content_imageview="@drawable/down_music"
	       app:text="@string/down_music"
        /> 
        <com.h2603953.littleyun.widget.CircleImageView 
	       android:id="@+id/recent_music"
	       style="@style/mymusic_model_btn"
	       app:content_imageview="@drawable/recent_music"
	       app:text="@string/recent_music"
        />  
    </LinearLayout>
    <LinearLayout 
        android:layout_below="@id/btns"
        android:layout_width="match_parent"
   		android:layout_height="match_parent"
   		android:layout_centerHorizontal="true"
   		android:background="@color/TabBgColoralpha"
   		android:orientation="vertical"
        >
        <RelativeLayout        
	    android:layout_width="match_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="10dp"  		
   		android:layout_marginLeft="16dp"
   		android:layout_marginRight="16dp"   		
	    >
		   <TextView 
		        android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	   			android:layout_alignParentLeft="true"
	   			android:text="@string/play_list"
	   			android:alpha="0.5"
	   			style="@style/playlist_tab"
		        />
		    <TextView 
		        android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	   			android:layout_alignParentRight="true"
	   			android:text="@string/more"
	   			android:alpha="0.5"
	   			style="@style/playlist_tab"
		        />
		</RelativeLayout>
	    <android.support.v7.widget.RecyclerView
	       android:id="@+id/recyclerview"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent" />
    </LinearLayout> 
           
</RelativeLayout>

