<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundrect"
    android:gravity="center"
    android:orientation="vertical" >
        <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/tiptitle"
	    	android:textSize="18dp"
	    	android:layout_margin="5dp"
	    	android:textColor="@color/TabBgColor"
	        />
        <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/tippermission"
	    	android:textSize="18dp"
	    	android:layout_margin="10dp"
	    	android:textColor="@color/TabBgColor"
	        />
        <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    <TextView 
	        android:id="@+id/tip_cancel"
		    android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/cancel"
		   	android:layout_marginTop="5dp"
		   	android:layout_marginLeft="20dp"
		   	android:layout_marginRight="20dp"
		   	android:textSize="16dp"
		   	android:textColor="@color/popup_btn"
        />
	    <TextView 
	        android:id="@+id/tip_create"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/sure"
	    	android:layout_marginTop="5dp"
	    	android:layout_marginLeft="20dp"
	    	android:layout_marginRight="20dp"
	    	android:textSize="16dp"
	    	android:textColor="@color/popup_btn"
        />
        
    </LinearLayout>
    

</LinearLayout>
