<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundrect"
    android:gravity="center"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/createplaylist"
    	android:textSize="18dp"
    	android:layout_margin="5dp"
    	android:textColor="@color/TabBgColor"
        />
    <com.h2603953.littleyun.widget.LoginEditText 
        android:id="@+id/popup_edt"  
        android:layout_width="match_parent"
    	android:layout_height="26dp"
    	android:layout_gravity="center" 
    	android:layout_margin="10dp"
    	android:singleLine="true"
    	android:hint="@string/playlistnamehint"
  		android:background="@null"
  		android:textColorHint="@color/TabBgColoralpha"
  		android:textSize="16dp"
  		android:drawablePadding="6dp"
  		android:textCursorDrawable="@drawable/color_cursor"
        />

    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    <TextView 
	        android:id="@+id/popup_cancel"
		    android:layout_width="wrap_content"
		   	android:layout_height="wrap_content"
		   	android:text="@string/cancel"
		   	android:layout_marginTop="5dp"
		   	android:layout_marginLeft="20dp"
		   	android:layout_marginRight="20dp"
		   	android:textSize="16dp"
		   	android:textColor="@color/popup_btn"
        />
	    <TextView 
	        android:id="@+id/popup_create"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/create"
	    	android:layout_marginTop="5dp"
	    	android:layout_marginLeft="20dp"
	    	android:layout_marginRight="20dp"
	    	android:textSize="16dp"
	    	android:textColor="@color/popup_btn"
        />
        
    </LinearLayout>
    

</LinearLayout>
